--- a/CustomKeyboard/Class/zh-Hans.lproj/File.strings
+++ b/CustomKeyboard/Class/zh-Hans.lproj/File.strings
@@ -5,10 +5,8 @@
   Created by 未思语 on 14/12/2017.
   Copyright © 2017 wsy. All rights reserved.
 */
-"del" = "del";
-"space" = "space";
-"finish" = "finish";
-"spot" = "spot";
-
-
+"del" = "删除";
+"space" = "空格";
+"finish" = "完成";
+"spot" = "点";
 
